test/data/semantic-errors/type-identifier-jen-has-not-been-declared.jen
type validJen : number | boolean | string | error
type invalidJen : validJen | jen
